# predicates-rs

./: .clog.toml  .tags  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines.yml  release.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yml
.github/workflows/: audit.yml  ci.yml  rust-next.yml
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: lib.rs  reflection.rs
crates/tree/: CHANGELOG.md  Cargo.toml  README.md
crates/tree/examples/: failures.rs
crates/tree/src/: lib.rs
examples/: case_tree.rs  tree_eval.rs
predicates-core/: Cargo.toml  README.md
predicates-core/src/: core.rs  lib.rs  reflection.rs
predicates-tree/: CHANGELOG.md  Cargo.toml  README.md
predicates-tree/src/: lib.rs
src/: boolean.rs  boxed.rs  color.rs  constant.rs  core.rs  function.rs  iter.rs  lib.rs  main.rs  map.rs  name.rs  ord.rs  prelude.rs  reflection.rs  set.rs  tree.rs  utils.rs
src/float/: close.rs  mod.rs
src/path/: existence.rs  fc.rs  fs.rs  ft.rs  mod.rs
src/predicate/: boolean.rs  boxed.rs  constant.rs  function.rs  map.rs  mod.rs  ord.rs  set.rs
src/predicate/float/: close.rs  mod.rs
src/predicate/path/: existence.rs  ft.rs  mod.rs
src/predicate/str/: difference.rs  mod.rs  regex.rs
src/str/: adapters.rs  basics.rs  difference.rs  dissimilar.rs  mod.rs  normalize.rs  regex.rs  similar.rs
