[workspace]
members = ["crates/core", "crates/tree"]

[package]
name = "predicates"
version = "2.0.3"
description = "An implementation of boolean-valued predicate functions."
authors = ["Nick Stevens <nick@bitcurry.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/predicates-rs"
homepage = "https://github.com/assert-rs/predicates-rs"
documentation = "https://docs.rs/predicates"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]
keywords = ["predicate", "boolean", "combinatorial", "match", "logic"]
edition = "2018"

[package.metadata.release]
pre-release-replacements = [
  {file="src/lib.rs", search="predicates = \".*\"", replace="predicates = \"{{version}}\"", exactly=1},
  {file="README.md", search="predicates = \".*\"", replace="predicates = \"{{version}}\"", exactly=1},
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/predicates-rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
predicates-core = { version = "1.0", path = "crates/core" }
difflib = { version = "0.4", optional = true }
normalize-line-endings = { version = "0.3.0", optional = true }
regex = { version="1.0", optional = true }
float-cmp = { version="0.9", optional = true }
itertools = "0.10"
yansi = { version = "0.5.0", optional = true }
concolor-control = { version = "0.0.7", optional = true }

[dev-dependencies]
predicates-tree = { version = "1.0", path = "crates/tree" }

[features]
default = ["diff", "regex", "float-cmp", "normalize-line-endings"]
diff = ["difflib"]
unstable = []
color = ["yansi", "concolor-control/std"]
color-auto = ["color", "concolor-control/auto"]
