[workspace]
members = ["crates/*"]

[package]
name = "predicates"
version = "2.1.5"
description = "An implementation of boolean-valued predicate functions."
authors = ["Nick Stevens <nick@bitcurry.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/predicates-rs"
homepage = "https://github.com/assert-rs/predicates-rs"
documentation = "https://docs.rs/predicates"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]
keywords = ["predicate", "boolean", "combinatorial", "match", "logic"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="src/lib.rs", search="predicates = \".*\"", replace="predicates = \"{{version}}\"", exactly=1},
  {file="README.md", search="predicates = \".*\"", replace="predicates = \"{{version}}\"", exactly=1},
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/predicates-rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
predicates-core = { version = "1.0", path = "crates/core" }
difflib = { version = "0.4", optional = true }
normalize-line-endings = { version = "0.3.0", optional = true }
regex = { version="1.0", optional = true }
float-cmp = { version="0.9", optional = true }
itertools = "0.10"
yansi = { version = "0.5.1", optional = true }
concolor = { version = "0.0.11", optional = true }

[dev-dependencies]
predicates-tree = { version = "1.0", path = "crates/tree" }

[features]
default = ["diff", "regex", "float-cmp", "normalize-line-endings"]
diff = ["dep:difflib"]
unstable = []
color = ["dep:yansi", "dep:concolor", "concolor?/std"]
color-auto = ["color", "concolor?/auto"]
