[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "predicates"
version = "3.1.0"
description = "An implementation of boolean-valued predicate functions."
authors = ["Nick Stevens <nick@bitcurry.com>"]
repository = "https://github.com/assert-rs/predicates-rs"
homepage = "https://github.com/assert-rs/predicates-rs"
documentation = "https://docs.rs/predicates"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]
keywords = ["predicate", "boolean", "combinatorial", "match", "logic"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="src/lib.rs", search="predicates = \".*\"", replace="predicates = \"{{version}}\"", exactly=1},
  {file="README.md", search="predicates = \".*\"", replace="predicates = \"{{version}}\"", exactly=1},
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/predicates-rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
predicates-core = { version = "1.0", path = "crates/core" }
difflib = { version = "0.4", optional = true }
normalize-line-endings = { version = "0.3.0", optional = true }
regex = { version="1.0", optional = true }
float-cmp = { version="0.9", optional = true }
anstyle = "1.0.0"

[dev-dependencies]
predicates-tree = { version = "1.0", path = "crates/tree" }

[features]
default = ["diff", "regex", "float-cmp", "normalize-line-endings", "color"]
diff = ["dep:difflib"]
unstable = []
color = []
