[package]
name = "predicates-tree"
version = "1.0.5"
authors = ["Nick Stevens <nick@bitcurry.com>"]
description = "Render boolean-valued predicate functions results as a tree."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/assert-rs/predicates-rs/tree/master/predicates-tree"
homepage = "https://github.com/assert-rs/predicates-rs/tree/master/predicates-tree"
documentation = "https://docs.rs/predicates-tree"
categories = ["data-structures", "rust-patterns"]
keywords = ["predicate", "boolean", "combinatorial", "match", "logic"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[dependencies]
predicates-core = { version = "1.0", path = "../core" }
termtree = "0.3"

[dev-dependencies]
predicates = { version = "2.0", path = "../..", features = ["color-auto"] }
