[package]
name = "predicates-tree"
version = "1.0.7"
authors = ["Nick Stevens <nick@bitcurry.com>"]
description = "Render boolean-valued predicate functions results as a tree."
readme = "README.md"
repository = "https://github.com/assert-rs/predicates-rs/tree/master/crates/tree"
homepage = "https://github.com/assert-rs/predicates-rs/tree/master/crates/tree"
documentation = "https://docs.rs/predicates-tree"
categories = ["data-structures", "rust-patterns"]
keywords = ["predicate", "boolean", "combinatorial", "match", "logic"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
predicates-core = { version = "1.0", path = "../core" }
termtree = "0.4.1"

[dev-dependencies]
predicates = { version = "2.1", path = "../..", features = ["color"] }
